<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_top_corners_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/write_a_review"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/starRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:foregroundTint="@color/purple_infinum"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        tools:rating="4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/comment"
        android:textColorHint="@color/purple_infinum"
        app:boxStrokeColor="@color/purple_infinum"
        app:errorEnabled="true"
        app:hintTextColor="@color/purple_infinum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="24sp"
            android:textColor="@color/black"
            tools:text="his show has changed my life. The way I see things, the way I live. This show was there for me when I needed it the most. One of the best cinematic/artistic creations by men. This show teaches you love, compassion, finding beauty in simple things in life. Story of a small paper supply company in a small town, yet took the world by storm." />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/confirm"
        app:cornerRadius="40dp" />

</LinearLayout>