<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:minHeight="60dp"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="88dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ScrollBasedActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/showImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_empty_picture"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize12dp"
                tools:src="@drawable/show_memento" />

            <TextView
                android:id="@+id/showDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="32dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:text="@string/placeholder_description_long" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/reviews"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/showReviewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                tools:text="@string/placeholder_rating_info" />

            <RatingBar
                android:id="@+id/showRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:foregroundTint="@color/purple_infinum"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="visible"
                tools:listitem="@layout/item_review" />

            <TextView
                android:id="@+id/noReviewsYet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="40dp"
                android:text="@string/no_reviews_yet"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/writeReviewButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/purple_infinum"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            app:cornerRadius="21.5dp" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
